<resources>
    <string name="nombreApp">Le Pokedex</string>
    <string name="nuevoPokemon">Nuevo Pokémon</string>
    <string name="editarPokemon">Editar Pokémon</string>

    <string name="plNombre">Nombre</string>
    <string name="plHP">HP</string>
    <string name="plAtaque">Ataque</string>
    <string name="plVelocidad">Velocidad</string>
    <string name="plDefensa">Defensa</string>

    <string name="plGuardar">Guardar</string>
    <string name="plVolver">Volver</string>
    <string name="plEditar">Editar</string>
    <string name="plEliminar">Eliminar</string>
    <string name="plFiltrar">Filtrar</string>
</resources>