<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/principal"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tituloPrincipal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:text="@string/nombreApp"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/imagenTituloPokeball"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/pokeball"
            />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNuevoPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondo_nuevo"
            android:paddingVertical="12dp"
            android:text="@string/nuevoPokemon"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/inter_medium"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/fondo_campos"
                    android:backgroundTint="#F5F5F5"
                    android:paddingHorizontal="12dp"
                    android:layout_marginBottom="12dp"
                    android:inputType="text"
                    android:hint="@string/plNombre" />

                <EditText
                    android:id="@+id/etHP"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/fondo_campos"
                    android:backgroundTint="#F5F5F5"
                    android:paddingHorizontal="12dp"
                    android:layout_marginBottom="12dp"
                    android:inputType="number"
                    android:hint="@string/plHP" />

                <EditText
                    android:id="@+id/etAtaque"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/fondo_campos"
                    android:backgroundTint="#F5F5F5"
                    android:paddingHorizontal="12dp"
                    android:layout_marginBottom="12dp"
                    android:inputType="number"
                    android:hint="@string/plAtaque" />

                <EditText
                    android:id="@+id/etVelocidad"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/fondo_campos"
                    android:backgroundTint="#F5F5F5"
                    android:paddingHorizontal="12dp"
                    android:layout_marginBottom="12dp"
                    android:inputType="number"
                    android:hint="@string/plVelocidad" />

                <EditText
                    android:id="@+id/etDefensa"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/fondo_campos"
                    android:backgroundTint="#F5F5F5"
                    android:paddingHorizontal="12dp"
                    android:layout_marginBottom="12dp"
                    android:inputType="number"
                    android:hint="@string/plDefensa" />

                <Spinner
                    android:id="@+id/spnTipo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/fondo_spinner"
                    android:layout_marginBottom="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnGuardar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:text="@string/plGuardar"
                        android:backgroundTint="@color/principal"
                        app:cornerRadius="10dp" />

                    <Button
                        android:id="@+id/btnVolver"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:text="@string/plVolver"
                        android:textColor="@color/principal"
                        android:backgroundTint="@color/white"
                        app:strokeColor="@color/principal"
                        app:strokeWidth="1dp"
                        app:cornerRadius="10dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>