<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/principal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tituloPrincipal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_bold"
            android:text="@string/nombreApp"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/imagenTituloPokeball"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/pokeball" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerFiltrar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/fondo_spinner" />

            <Button
                android:id="@+id/botonFiltrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/principal"
                android:text="@string/plFiltrar"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/lvPokemons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false"/>

    <Button
        android:id="@+id/botonAnadirPokemon"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/principal"
        android:fontFamily="@font/inter_medium"
        android:text="@string/nuevoPokemon"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="12dp" />

</LinearLayout>